# academy-dbt-group-training

./: .gitignore  .pre-commit-config.yaml  .user.yml  Makefile  README.md  profiles.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: ci.yml  dbt-bigquery.yml
data/: dim_customers_example.sql
data/jaffle_shop/.cloudbuild/: cd.yml  ci.yml  daily.yml
deploy/: dbt_project.yml
jaffle_shop/: Makefile  cloudbuild.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
jaffle_shop/.cloudbuild/: ci.yml
jaffle_shop/analyses/: check_total_rev.sql  esborrany.sql  payments_pivot_v1_sql.sql  payments_pivot_v2_jinja.sql  scratchpad.sql
jaffle_shop/macros/: cents_to_dollars.sql  convert_to_cents.sql  generate_schema_name.sql  surrogate_key.sql
jaffle_shop/models/: customers.sql
jaffle_shop/models/documentation/: doc_order_status.md
jaffle_shop/models/example/: customers.sql
jaffle_shop/models/marts/: _dim_customers.yml  _fct_orders.yml  _marts__models.yml  _marts_models.yml  customers.sql  dim_customers.sql  fct_orders.sql  fct_orders_incremental.sql  fct_supplies.sql  order_payments.sql
jaffle_shop/seeds/: raw_orders.csv  raw_payments.csv  seeds.yml
jaffle_shop/snapshots/: _snapshot_students.yml
jaffle_shop/tests/: accepted_range.sql  check_order_date_after_today.sql  my_sql_amounts  no_orders_after_today.sql  order_date_not_in_future.sql  payment_amount_positive.sql  test_amount_ge_0.sql  test_order_not_future_date.sql
jaffle_shop_training/: dbt_project.yml  packages.yml
jaffle_shop_training/analyses/: scratchpad.sql
scripts/: example_profiles.yml  install_dependencies.sh
(+64 files in other folders)
